# attestor

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
src/attestor/: __init__.py  canonical.py  config.py
tests/: test_annexiv_citations.py  test_annexiv_generator.py  test_annexiv_golden.py  test_annexiv_model.py  test_annexiv_pdf.py  test_api_core.py  test_api_evidence.py  test_bundle_integrity.py  test_canonical.py  test_checksum_isolation.py  test_classifier_determinism.py  test_classifier_engine.py  test_classifier_golden.py  test_classifier_model.py  test_classifier_omnibus_golden.py  test_governance_audit_log.py  test_governance_crosswalk.py  test_governance_fria.py  test_health.py  test_ledger_cli.py  test_ledger_keys.py  test_ledger_merkle.py  test_ledger_signed_root.py  test_ledger_timestamp.py  test_ledger_verifier.py  test_legal_text_additivity.py  test_provenance_devcert.py  test_provenance_manifest.py  test_provenance_signer.py  test_provenance_verifier.py  test_timeline.py
tests/golden/: annexiv-v2026-08.yaml  omnibus-2026.yaml  v2026-08.yaml
web/: README.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AnnexIvCard.tsx  ClassificationCard.tsx  CrosswalkCard.tsx  FriaCard.tsx  HonestyBanner.tsx  LanguageToggle.tsx  LedgerCard.tsx  ProvenanceCard.tsx  QuestionnaireForm.tsx  SiteHeader.tsx  TimelineTable.tsx  chrome.module.css  sections.module.css  ui.module.css  ui.tsx
web/lib/: api.ts
(+46 files in other folders)
