[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attestor"
dynamic = ["version"]
description = "Deterministic EU AI Act compliance engine: risk classification, Annex IV dossier with validated citations, C2PA provenance, and an offline-verifiable cryptographic ledger."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marcos Mata García", email = "matagarciamarcos@gmail.com" }]
keywords = [
    "eu-ai-act",
    "compliance",
    "ai-governance",
    "c2pa",
    "provenance",
    "ledger",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Private :: Do Not Upload",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.hatch.version]
path = "src/attestor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/attestor"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
